<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Tremotesf</string>
    <string name="add_navigation_bar_padding" translatable="false">add_navigation_bar_padding</string>
    <string name="add_navigation_bar_margin" translatable="false">add_navigation_bar_margin</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting\u2026</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="add">Add</string>
    <string name="invalid_connection_configuration">Invalid connection configuration</string>
    <string name="timed_out">Connection timed out</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_with_cause">Connection error: %1$s</string>
    <string name="authentication_error">Authentication error</string>
    <string name="parsing_error">JSON parsing error</string>
    <string name="unsupported_server_version">Transmission version \'%1$s\' is not supported</string>
    <string name="server_returned_error_result">Server returned \'%1$s\'</string>
    <string name="main_activity_subtitle">\u2193 %1$s    \u2191 %2$s</string>
    <string name="current_server_string">%1$s (%2$s)</string>
    <string name="download_speed_string">\u2193 %s</string>
    <string name="upload_speed_string">\u2191 %s</string>
    <string name="server">Server</string>
    <string name="server_settings">Server settings</string>
    <string name="sort">Sort</string>
    <string name="progress">Progress</string>
    <string name="eta">ETA</string>
    <string name="ratio">Ratio</string>
    <string name="size">Size</string>
    <string name="added_date">Added date</string>
    <string name="status">Status</string>
    <string name="no_torrents">No torrents</string>
    <string name="torrents_all">All (%d)</string>
    <string name="torrents_active">Active (%d)</string>
    <string name="torrents_downloading">Downloading (%d)</string>
    <string name="torrents_seeding">Seeding (%d)</string>
    <string name="torrents_paused">Paused (%d)</string>
    <string name="torrents_checking">Checking (%d)</string>
    <string name="torrents_errored">Errored (%d)</string>
    <string name="trackers_spinner_text">%1$s (%2$d)</string>
    <string name="directories_spinner_text">%1$s (%2$d)</string>
    <plurals name="torrents_selected">
        <item quantity="one">%d torrent selected</item>
        <item quantity="other">%d torrents selected</item>
    </plurals>
    <plurals name="files_selected">
        <item quantity="one">%d file selected</item>
        <item quantity="other">%d files selected</item>
    </plurals>
    <plurals name="trackers_selected">
        <item quantity="one">%d tracker selected</item>
        <item quantity="other">%d trackers selected</item>
    </plurals>
    <plurals name="peers_plural">
        <item quantity="one">%d peer</item>
        <item quantity="other">%d peers</item>
    </plurals>
    <plurals name="seeders_plural">
        <item quantity="one">%d seeder</item>
        <item quantity="other">%d seeders</item>
    </plurals>
    <plurals name="leechers_plural">
        <item quantity="one">%d leecher</item>
        <item quantity="other">%d leechers</item>
    </plurals>
    <string name="next_update">Next update after %s</string>
    <string name="add_trackers">Add trackers</string>
    <string name="edit_tracker">Edit tracker</string>
    <string name="tracker_announce_url">Tracker announce URL</string>
    <string name="trackers_announce_urls">Trackers announce URLs</string>
    <string name="torrent_finished">Torrent finished</string>
    <string name="torrent_added">Torrent added</string>
    <string name="torrent_not_found">Torrent not found</string>
    <string name="details">Details</string>
    <string name="files">Files</string>
    <string name="trackers">Trackers</string>
    <string name="directories">Directories</string>
    <string name="peers">Peers</string>
    <string name="web_seeders">Web seeders</string>
    <string name="limits">Limits</string>
    <string name="activity">Activity</string>
    <string name="information">Information</string>
    <string name="completed">Completed</string>
    <string name="downloaded">Downloaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="download_speed">Download speed</string>
    <string name="upload_speed">Upload speed</string>
    <string name="seeders">Seeders</string>
    <string name="leechers">Leechers</string>
    <string name="peers_sending_to_us">Peers we\'re downloading from</string>
    <string name="web_seeders_sending_to_us">Web seeders we\'re downloading from</string>
    <string name="peers_getting_from_us">Peers we\'re uploading to</string>
    <string name="last_activity">Last activity</string>
    <string name="total_size">Total size</string>
    <string name="location">Location</string>
    <string name="hash">Hash</string>
    <string name="created_by">Created by</string>
    <string name="created_on">Created on</string>
    <string name="comment">Comment</string>
    <string name="labels">Labels</string>
    <string name="edit_labels">Edit labels</string>
    <string name="new_label">New label</string>
    <string name="set_labels_error">Failed to update torrent\'s labels: %1$s</string>
    <string name="parent_directory_list_item_label">..</string>
    <string name="progress_string">%s%%</string>
    <string name="progress_string_with_dot">\u00b7 %s%%</string>
    <string name="completed_string">%1$s of %2$s (%3$s%%)</string>
    <string name="priority">Priority</string>
    <string name="high_priority">High</string>
    <string name="normal_priority">Normal</string>
    <string name="low_pririty">Low</string>
    <string name="mixed_priority">Mixed</string>
    <string name="download_verb">Download</string>
    <string name="not_download">Not download</string>
    <string name="no_files">No files</string>
    <string name="tracker_inactive">Inactive</string>
    <string name="tracker_waiting_for_update">Waiting for update</string>
    <string name="tracker_queued_for_update">About to update</string>
    <string name="tracker_updating">Updating</string>
    <string name="tracker_error">Error: %s</string>
    <string name="loading">Loading\u2026</string>
    <string name="no_peers">No peers</string>
    <string name="no_trackers">No trackers</string>
    <string name="speed">Speed</string>
    <string name="honor_global_limits">Honor global limits</string>
    <string name="download_noun">Download</string>
    <string name="upload_noun">Upload</string>
    <string-array name="priority_items" translatable="false">
        <item>@string/high_priority</item>
        <item>@string/normal_priority</item>
        <item>@string/low_pririty</item>
    </string-array>
    <string name="seeding">Seeding</string>
    <string name="ratio_limit">Ratio limit</string>
    <string-array name="ratio_limit_mode">
        <item>Use global settings</item>
        <item>Seed regardless of ratio</item>
        <item>@string/stop_seeding_at_ratio</item>
    </string-array>
    <string name="idle_seeding">Idle seeding</string>
    <string-array name="idle_seeding_mode">
        <item>Use global settings</item>
        <item>Seed regardless of activity</item>
        <item>@string/stop_seeding_if_idle_for</item>
    </string-array>
    <string name="text_field_suffix_minutes">minutes</string>
    <string name="maximum_peers">Maximum peers</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="quit">Quit</string>
    <string name="select_all">Select all</string>
    <string name="add_server">Add server</string>
    <string name="edit_server">Edit server</string>
    <plurals name="servers_selected">
        <item quantity="one">%d server selected</item>
        <item quantity="other">%d servers selected</item>
    </plurals>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <plurals name="remove_servers_message">
        <item quantity="one">Are you sure you want to remove %d selected server?</item>
        <item quantity="other">Are you sure you want to remove %d selected servers?</item>
    </plurals>
    <string name="no_servers">No servers</string>
    <string name="name">Name</string>
    <string name="address_edit_hint">Domain name or IP address</string>
    <string name="port">Port</string>
    <string name="api_path">API path</string>
    <string name="use_https_protocol">Use HTTPS protocol</string>
    <string name="https_hint">Make sure that server listening on this port expects HTTPS connections. If you are using HTTP to HTTPS redirection you need to uncheck this</string>
    <string name="certificates">Certificates</string>
    <string name="server_uses_self_signed_certificate">Server uses self-signed certificate</string>
    <string name="certificate">Certificate in PEM format</string>
    <string name="use_client_certificate_authentication">Use client certificate authentication</string>
    <string name="authentication">Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_hint">This update interval is used only when application is in foreground, or persistent notification is active. Background update interval can be configured in application settings.</string>
    <string name="text_field_suffix_seconds">seconds</string>
    <string name="timeout">Timeout</string>
    <string name="empty_field_error">This field can\'t be empty</string>
    <string name="number_range_error">The value must be in range of %1$d - %2$d</string>
    <string name="number_range_error_float">The value must be in range of %1$.1f - %2$.1f</string>
    <string name="number_parse_error_integer">The value is not an integer number</string>
    <string name="number_parse_error_float">The value is not a decimal number</string>
    <string name="server_exists">Server with this name already exists</string>
    <string name="overwrite">Overwrite</string>
    <string name="add_torrent">Add torrent</string>
    <string name="add_torrent_file">Add torrent file</string>
    <string name="storage_permission_error">Storage permission is required</string>
    <string name="connection">Connection</string>
    <string name="peer_port">Peer port</string>
    <string name="random_port">Random port on Transmission start</string>
    <string name="port_forwarding">Enable port forwarding</string>
    <string name="enable_utp">Enable uTP</string>
    <string name="enable_pex">Enable PEX</string>
    <string name="enable_dht">Enable DHT</string>
    <string name="enable_lpd">Enable LPD</string>
    <string name="peer_limits">Peer limits</string>
    <string name="maximum_peers_per_torrent">Maximum peers per torrent</string>
    <string name="maximum_peers_globally">Maximum peers globally</string>
    <string name="start_downloading_after_adding">Start downloading after adding</string>
    <string name="add_torrent_link">Add torrent link</string>
    <string name="server_stats">Server statistics</string>
    <string name="start">Start</string>
    <string name="start_now">Start now</string>
    <string name="pause">Pause</string>
    <string name="check_local_data">Check local data</string>
    <string name="reannounce">Reannounce</string>
    <string name="set_location">Set location</string>
    <string name="rename">Rename</string>
    <string name="alternative_speed_limits">Alternative speed limits</string>
    <string name="connection_settings">Connection settings</string>
    <string name="share">Share</string>
    <string name="transmission_settings">Transmission settings</string>
</resources>