<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/start"
        android:icon="?attr/startIcon"
        android:title="@string/start"/>

    <item
        android:id="@+id/pause"
        android:icon="?attr/pauseIcon"
        android:title="@string/pause"/>

    <item
        android:id="@+id/check"
        android:icon="?attr/findInPageIcon"
        android:title="@string/check_local_data"/>

    <item
        android:id="@+id/reannounce"
        android:icon="?attr/syncIcon"
        android:title="@string/reannounce"/>

    <item
        android:id="@+id/set_location"
        android:title="@string/set_location"/>

    <item
        android:id="@+id/rename"
        android:title="@string/rename"/>

    <item
        android:id="@+id/remove"
        android:icon="?attr/deleteIcon"
        android:title="@string/remove"/>

    <item
        android:id="@+id/select_all"
        android:icon="?attr/selectAllIcon"
        android:title="@string/select_all" />
</menu>