<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="?attr/downloadIcon"
        android:title="@string/download_noun"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/download"
                android:title="@string/download_verb"/>
            <item
                android:id="@+id/not_download"
                android:title="@string/not_download"/>
        </menu>
    </item>

    <item
        android:icon="?attr/priorityIcon"
        android:title="@string/priority"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/high_priority"
                    android:title="@string/high_priority"/>
                <item
                    android:id="@+id/normal_priority"
                    android:title="@string/normal_priority"/>
                <item
                    android:id="@+id/low_priority"
                    android:title="@string/low_pririty"/>
                <item
                    android:id="@+id/mixed_priority"
                    android:title="@string/mixed_priority"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/select_all"
        android:icon="?attr/selectAllIcon"
        android:title="@string/select_all"/>
</menu>