<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_file_download_24dp"
        android:title="@string/download_noun">

        <menu>
            <item
                android:id="@+id/download"
                android:title="@string/download_verb"/>
            <item
                android:id="@+id/not_download"
                android:title="@string/not_download"/>
        </menu>
    </item>

    <item
        android:icon="@drawable/ic_priority_high_24dp"
        android:title="@string/priority">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/high_priority"
                    android:title="@string/high_priority"/>
                <item
                    android:id="@+id/normal_priority"
                    android:title="@string/normal_priority"/>
                <item
                    android:id="@+id/low_priority"
                    android:title="@string/low_pririty"/>
                <item
                    android:id="@+id/mixed_priority"
                    android:title="@string/mixed_priority"/>
            </group>
        </menu>
    </item>
</menu>