<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/connect"
        android:title="@string/connect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/add_torrent_file"
        android:title="@string/add_torrent_file"
        app:showAsAction="never"/>

    <item
        android:id="@id/to_add_torrent_link_fragment"
        android:title="@string/add_torrent_link"
        app:showAsAction="never"/>

    <item
        android:id="@id/to_server_settings_fragment"
        android:title="@string/server_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/alternative_speed_limits"
        android:checkable="true"
        android:title="@string/alternative_speed_limits"
        app:showAsAction="never"/>

    <item
        android:id="@id/to_server_stats_dialog"
        android:title="@string/server_stats"
        app:showAsAction="never"/>
</menu>